added status with words

--- a/BurnDown/Views/Home/Index.cshtml
+++ b/BurnDown/Views/Home/Index.cshtml
@@ -3,3 +3,8 @@
 }
 
 <h2>@ViewBag.Message</h2>
+<h3>
+@Html.ActionLink("Manage Projects", "index", "projects")
+<br />
+@Html.ActionLink("Manage Developers", "index", "developers")
+</h3>
